# constructor-web

./: .gitignore  AGENTS.md  Constructor-Web.html  LICENSE  README.md  WebCraft_Studio.desktop  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
.github/workflows/: main.yml  release.yaml
docs/: CREDITS.md  ESTADO-REAL-v0.1.md  GUIA-BLOQUES.md  example-full.html
docs/real/: index.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ComponentLibrary.tsx  Editor.tsx  ExportDialog.tsx  FloatingToolbar.tsx  GuidedTooltips.tsx  MenuBar.tsx  PageSettings.tsx  PreviewExitBar.tsx  RichTextEditor.tsx  SectionWrapper.tsx  SettingsModal.tsx  Splash.tsx  Toolbar.tsx
src/components/ui/: Modal.tsx  Toast.tsx  Tooltip.tsx
src/hooks/: useAutoSave.ts  useKeyboardShortcuts.ts
src/sections/: index.tsx
src/store/: appStore.ts  projectStore.ts
src/templates/: index.ts
src/types/: index.ts
src/utils/: export.ts  fileSystem.ts  sanitize.ts  storage.ts  theme.ts
